--- a/example/iosApp/iosApp/Info.plist
+++ b/example/iosApp/iosApp/Info.plist
@@ -7,7 +7,7 @@
   <key>CFBundleDevelopmentRegion</key>
   <string>en</string>
   <key>CFBundleDisplayName</key>
-  <string>AvConf</string>
+  <string>kmp-webrtc</string>
   <key>CFBundleExecutable</key>
   <string>${EXECUTABLE_NAME}</string>
   <key>CFBundleIcons</key>
