--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,23 +6,18 @@ minSdk = "21"
 targetSdk = "35"
 agp = "8.7.3"
 kotlin = "2.1.0"
-mockk = "1.13.16"
-ktor = "3.0.3"
-coroutine = "1.10.1"
-compose = "1.7.7"
 kmpXlog = "1.3.1"
+permissionsDispatcher = "4.9.2"
 
 [libraries]
 kotlinx-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0"
 kmpXlog = { module = "com.piasy:kmp-xlog", version.ref = "kmpXlog" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 
-androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
-androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
-androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
-androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
-androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
-androidx-activity-compose = "androidx.activity:activity-compose:1.10.0"
+androidx-appcompat = "androidx.appcompat:appcompat:1.7.0"
+permissionsDispatcher = { module = "com.github.permissions-dispatcher:permissionsdispatcher", version.ref = "permissionsDispatcher" }
+permissionsDispatcher-processor = { module = "com.github.permissions-dispatcher:permissionsdispatcher-processor", version.ref = "permissionsDispatcher" }
+androidx-lifecycle = "androidx.lifecycle:lifecycle-runtime-ktx:2.8.7"
 
 [plugins]
 android-library = { id = "com.android.library", version.ref = "agp" }
