--- a/example/iosApp/project.yml
+++ b/example/iosApp/project.yml
@@ -15,7 +15,6 @@ targets:
       TARGETED_DEVICE_FAMILY: "1,2"
       ASSETCATALOG_COMPILER_APPICON_NAME: "AppIcon"
       ASSETCATALOG_COMPILER_LAUNCHIMAGE_NAME: "LaunchImage"
-      ENABLE_BITCODE: "NO"
       DEVELOPMENT_TEAM: "32VR5PEEGQ"
       ONLY_ACTIVE_ARCH: "NO"
-      VALID_ARCHS: "arm64"
+      VALID_ARCHS: "arm64 arm64e x86_64"
