--- a/example/macApp/project.yml
+++ b/example/macApp/project.yml
@@ -13,3 +13,5 @@ targets:
       FRAMEWORK_SEARCH_PATHS: "$(inherited)"
       CLANG_WARN_DOCUMENTATION_COMMENTS: "NO"
       ASSETCATALOG_COMPILER_APPICON_NAME: "AppIcon"
+      ONLY_ACTIVE_ARCH: "NO"
+      VALID_ARCHS: "arm64 x86_64"
