--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
             dep: "brew update && brew install cocoapods xcodegen"
           - cmd: ".\\scripts\\setup_windows.bat && cd example\\winApp && msbuild winApp.vcxproj /t:Build /p:Configuration=Release /p:Platform=x64"
             os: windows-latest
-            dep: "echo \"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Tools\\MSVC\\14.43.34808\\bin\\Hostx64\\x64\" >> %GITHUB_PATH%"
+            dep: "dir \"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Tools\\MSVC\\14.43.34808\\bin\\Hostx64\\x64\lib.exe\""
     runs-on: ${{ matrix.os }}
     permissions:
       pull-requests: write
