add web support

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,8 @@ jobs:
             dep: "brew update && brew install cocoapods xcodegen"
           - cmd: ".\\scripts\\setup_windows.bat \"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Tools\\MSVC\\14.43.34808\\bin\\Hostx64\\x64\\lib.exe\" && cd example\\winApp && msbuild winApp.vcxproj /t:Build /p:Configuration=Release /p:Platform=x64"
             os: windows-latest
+          - cmd: "./gradlew :example:webApp:jsBrowserDistribution"
+            os: macos-latest
     runs-on: ${{ matrix.os }}
     permissions:
       pull-requests: write
