--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,12 +6,12 @@ minSdk = "21"
 targetSdk = "35"
 agp = "8.7.3"
 kotlin = "2.1.0"
-kmpXlog = "1.3.4"
 permissionsDispatcher = "4.9.2"
 
 [libraries]
+kotlin-stdlib-js = { module = "org.jetbrains.kotlin:kotlin-stdlib-js", version.ref = "kotlin" }
 kotlinx-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0"
-kmpXlog = { module = "com.piasy:kmp-xlog", version.ref = "kmpXlog" }
+kmpXlog = "com.piasy:kmp-xlog:1.3.5"
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 
 androidx-appcompat = "androidx.appcompat:appcompat:1.7.0"
