--- a/example/linuxApp/CMakeLists.txt
+++ b/example/linuxApp/CMakeLists.txt
@@ -4,14 +4,6 @@ project(linuxApp)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-#find_package(Qt5 REQUIRED COMPONENTS Widgets)
-
-#include_directories(${Qt5Widgets_INCLUDE_DIRS})
-
-#set(CMAKE_AUTOMOC ON)
-#set(CMAKE_AUTORCC ON)
-#set(CMAKE_AUTOUIC ON)
-
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/linux/x64)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../libs/windows_linux/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../common/cpp)
@@ -23,18 +15,30 @@ file(GLOB deps
         ${CMAKE_CURRENT_SOURCE_DIR}/../../libs/linux/x64/liblinux_pc_client.so
         )
 
-#add_executable(${PROJECT_NAME}
-#        main.cpp
-#        main_window.cpp
-#        main_window.h
-#        loopback.cpp
-#        ${CMAKE_CURRENT_SOURCE_DIR}/../common/cpp/libKmpWebrtc.cpp
-#        )
+set(BUILD_QT_DEMO FALSE)
+if (BUILD_QT_DEMO)
+    find_package(Qt5 REQUIRED COMPONENTS Widgets)
 
-#target_link_libraries(${PROJECT_NAME}
-#        ${Qt5Widgets_LIBRARIES}
-#        ${deps}
-#        )
+    include_directories(${Qt5Widgets_INCLUDE_DIRS})
+
+    set(CMAKE_AUTOMOC ON)
+    set(CMAKE_AUTORCC ON)
+    set(CMAKE_AUTOUIC ON)
+
+    add_executable(${PROJECT_NAME}
+            main.cpp
+            main_window.cpp
+            main_window.h
+            loopback.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/../common/cpp/libKmpWebrtc.cpp
+            )
+
+    target_link_libraries(${PROJECT_NAME}
+            ${Qt5Widgets_LIBRARIES}
+            ${deps}
+            )
+endif()
+
 
 add_executable(loopback
         console_app.cpp
@@ -46,16 +50,19 @@ target_link_libraries(loopback
         ${deps}
         )
 
-set(FFMPEG_INCLUDE_DIR /home/linker/src/FFmpeg/build/include)
-set(FFMPEG_LIB_DIR /home/linker/src/FFmpeg/build/lib)
-include_directories(${FFMPEG_INCLUDE_DIR})
+set(BUILD_FFMPEG_TEST FALSE)
+if (BUILD_FFMPEG_TEST)
+    set(FFMPEG_INCLUDE_DIR /home/linker/src/FFmpeg/build/include)
+    set(FFMPEG_LIB_DIR /home/linker/src/FFmpeg/build/lib)
+    include_directories(${FFMPEG_INCLUDE_DIR})
 
-add_executable(ffmpeg_test
-        ffmpeg_test.cpp
-        )
+    add_executable(ffmpeg_test
+            ffmpeg_test.cpp
+            )
 
-target_link_libraries(ffmpeg_test
-        ${FFMPEG_LIB_DIR}/libavcodec.so
-        ${FFMPEG_LIB_DIR}/libavformat.so
-        ${FFMPEG_LIB_DIR}/libavutil.so
-        )
+    target_link_libraries(ffmpeg_test
+            ${FFMPEG_LIB_DIR}/libavcodec.so
+            ${FFMPEG_LIB_DIR}/libavformat.so
+            ${FFMPEG_LIB_DIR}/libavutil.so
+            )
+endif ()
