--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,20 +19,22 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - cmd: "./gradlew :kmp-webrtc:testDebugUnitTest"
-            os: macos-latest
-          - cmd: "./gradlew :example:androidApp:assembleDebug"
-            os: macos-latest
-          - cmd: "./scripts/build_ios_demo.sh"
-            os: macos-latest
+          - os: macos-latest
+            cmd: "./gradlew :kmp-webrtc:testDebugUnitTest"
+          - os: macos-latest
+            cmd: "./gradlew :example:androidApp:assembleDebug"
+          - os: macos-latest
             dep: "brew update && brew install cocoapods xcodegen"
-          - cmd: "./scripts/build_mac_demo.sh"
-            os: macos-latest
+            cmd: "./scripts/build_ios_demo.sh"
+          - os: macos-latest
             dep: "brew update && brew install cocoapods xcodegen"
-          - cmd: ".\\scripts\\setup_windows.bat \"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Tools\\MSVC\\14.43.34808\\bin\\Hostx64\\x64\\lib.exe\" && cd example\\winApp && msbuild winApp.vcxproj /t:Build /p:Configuration=Release /p:Platform=x64"
-            os: windows-latest
-          - cmd: "./gradlew :example:webApp:jsBrowserDistribution"
-            os: macos-latest
+            cmd: "./scripts/build_mac_demo.sh"
+          - os: windows-latest
+            cmd: ".\\scripts\\setup_windows.bat \"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\VC\\Tools\\MSVC\\14.43.34808\\bin\\Hostx64\\x64\\lib.exe\" && cd example\\winApp && msbuild winApp.vcxproj /t:Build /p:Configuration=Release /p:Platform=x64"
+          - os: macos-latest
+            cmd: "./gradlew :example:webApp:jsBrowserDistribution"
+          - os: ubuntu-latest
+            cmd: "./scripts/build_linux_demo.sh"
     runs-on: ${{ matrix.os }}
     permissions:
       pull-requests: write
