--- a/example/androidApp/src/main/AndroidManifest.xml
+++ b/example/androidApp/src/main/AndroidManifest.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <application
-      android:allowBackup="false"
-      android:icon="@drawable/ic_launcher"
-      android:label="@string/app_name"
-      android:networkSecurityConfig="@xml/network_security_config"
-      android:theme="@style/AppTheme"
-      >
-    <activity
-        android:name=".HallActivity"
-        android:exported="true"
-        android:screenOrientation="portrait"
-        >
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
+    <application
+            android:allowBackup="false"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"
+            android:networkSecurityConfig="@xml/network_security_config"
+            android:theme="@style/AppTheme">
+        <activity
+                android:name=".HallActivity"
+                android:exported="true"
+                android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-    <activity android:name=".SettingsActivity" />
-    <activity
-        android:name=".CallActivity"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".ScreenShareActivity"
-        android:screenOrientation="portrait"
-        />
-  </application>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".SettingsActivity" />
+        <activity
+                android:name=".CallActivity"
+                android:screenOrientation="portrait" />
+        <activity
+                android:name=".MediasoupActivity"
+                android:exported="false" />
+<!--        <activity-->
+<!--                android:name=".ScreenShareActivity"-->
+<!--                android:screenOrientation="portrait" />-->
+    </application>
 
 </manifest>
