--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ android.nonTransitiveRClass=true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.js.generate.executable.default=false
+
+org.gradle.java.home=/Users/linker/Library/Java/JavaVirtualMachines/corretto-17.0.14/Contents/Home/
